--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+html{
+  background-color:#FAF6EE;
+  color: black;
+}
+
+.fp-watermark {
+  display: none;
+}
+
+a{
+  z-index: 1;
+}
+
+a:hover{
+  cursor: pointer;
+}
+
+.flip-card {
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flip-card-front, .flip-card-back {
+  backface-visibility: hidden;
+}
+
+.flip-card-back{
+  position: absolute;
+  top: 0;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+}
+
 @font-face {
   font-family: Karl;
   src: url('../public/fonts/Karl-Regular.otf') format('truetype');
