--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,9 +5,26 @@
 /* importing font swag */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+.fixed-to-container{
+  -webkit-transform: translateZ(0);
+}
+
+/* div > section:first-child > .fp-overflow{
+  overflow-y: hidden !important;
+} */
+
 html{
   background-color:#FAF6EE;
   color: black;
+  overflow-x: hidden;
+}
+
+body{
+  overflow: hidden !important;
+}
+
+.fp-overflow{
+  overflow-x: hidden;
 }
 
 .fp-watermark {
