--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,20 +94,20 @@ a:hover{
 }
 @font-face {
   font-family: 'Monsterrat';
-  src: url('/public/fonts/Montserrat-Black.ttf') format('truetype');
+  src: url('../public/fonts/Montserrat-Black.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
 }
 @font-face {
   font-family: 'Monsterrat Light';
-  src: url('/public/fonts/Montserrat-Light.ttf') format('truetype');
+  src: url('../public/fonts/Montserrat-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
 }
 @font-face {
   font-family: 'Monsterrat Extra Light';
-  src: url('/public/fonts/Montserrat-ExtraLight.ttf') format('truetype');
-  font-weight: 100;
+  src: url('../public/fonts/Montserrat-ExtraLight.ttf') format('truetype');
+  font-weight: 300;
   font-style: italic;
 }
 a {
