--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,12 +69,6 @@ a:hover{
   src: url('../public/fonts/Karl-Regular.otf') format('truetype');
 }
 @font-face {
-  font-family: 'Helvetica Neue Bold';
-  src: url('/public/fonts/helveticaneue/HelveticaNeue\ Bold.tff') format('truetype');
-  font-weight: 700;
-  font-style: normal;
-}
-@font-face {
   font-family: 'Helvetica Neue Medium';
   src: url('/public/fonts/helveticaneue/HelveticaNeue\ Medium.ttf') format('truetype');
   font-weight: 500;
@@ -91,6 +85,19 @@ a:hover{
   src: url('/public/fonts/helveticaneue/HelveticaNeueIt.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
+}
+
+@font-face {
+  font-family: 'Monsterrat SemiBold';
+  src: url('../public/fonts/Montserrat-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Monsterrat Bold';
+  src: url('../public/fonts/Montserrat-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
 }
 @font-face {
   font-family: 'Monsterrat';
