feat: saving changes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -222,3 +222,10 @@ html {
 .hovered-nav { 
   @apply cursor-pointer px-[16px] py-[3px] rounded-[4px] hover:bg-[#CDB7F6] transition-all duration-300 ;
 }
+
+.active-tab {
+  @apply px-[16px] py-[3px] rounded-[4px] text-mon-purple bg-black ;
+}
+.inactive-tab {
+  @apply px-[16px] py-[3px] rounded-[4px] cursor-pointer hover:bg-mon-purple  text-black transition-500;
+}
