--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,11 @@ a:hover{
 
 
 @font-face {
+  font-family: 'Monsterrat Medium';
+  src: url('../public/fonts/Montserrat-SemiBold.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}@font-face {
   font-family: 'Monsterrat SemiBold';
   src: url('../public/fonts/Montserrat-SemiBold.ttf') format('truetype');
   font-weight: 600;
